fix(tb): visible separators

--- a/src/ui/react/toolbar/styles/global.css
+++ b/src/ui/react/toolbar/styles/global.css
@@ -66,7 +66,7 @@ body {
   .ft-bar-right {
     display: flex;
     align-items: center;
-    height: min-content;
+    height: 100%;
     gap: 4px;
   }
 
@@ -90,12 +90,16 @@ body {
   }
 }
 
+.ft-bar-separator {
+  width: 8px;
+  height: 100%;
+}
+
 .ft-bar-item {
   display: flex;
   align-items: center;
   justify-content: center;
   min-width: 0;
-  height: min-content;
   padding: var(--item-padding);
 
   button {
